--- a/login/style.css
+++ b/login/style.css
@@ -15,45 +15,40 @@
 
 body {
     height: 100vh;
+    width: 100vw;
     background: #f6f5f7;
-    display: grid;
-    place-content: center;
-    font-family: 'Poppins', sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .container {
-    position: relative;
-    width: 850px;
-    height: 500px;
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: start;
+    width: 90%;
+    height: 70%;
     background: #fff;
     border-radius: 13px;
     overflow: hidden;
 }
 
 .form-container{
-    position: absolute;
-    width: 60%;
-    height: 100%;
-    padding: 0 40px;
+    width: 100%;
+    height: 60%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     transition: all 0.6s ease-in-out;
 }
 
-.sign-up-container {
-    opacity: 0;
-    z-index: 1;
-}
-
 form {
+    width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 0 50px;
-}
-
-h1 {
-    color: var(--grad-clr1);
 }
 
 span{
@@ -61,9 +56,8 @@ span{
 }
 
 .infield{
-    position: relative;
-    margin: 8px 0;
-    width: 100%;
+    width: 90%;
+    margin: 6px 0;
 }
 
 input{
@@ -75,9 +69,6 @@ input{
 }
 
 label{
-    position: absolute;
-    left: 50%;
-    top: 100%;
     transform: translate(-50%);
     width: 0;
     height: 2px;
@@ -125,67 +116,34 @@ button{
 }
 
 .overlay-container{
-    position: absolute;
-    top: 0;
-    left: 60%;
-    width: 40%;
-    height: 100%;
-    overflow: hidden;
+    background: var(--linear-grad);
+    width: 100%;
+    height: 40%;
     transition: transform 0.6s ease-in-out;
-    z-index: 9;
-}
-
-#overlay{
-    cursor: pointer;
-    position: absolute;
-    left: 50%;
-    top: 304px;
-    transform: translateX(-50%);
-    width: 143.67px;
-    height: 40px;
-    border: 1px solid #fff;
-    background: transparent;
-    border-radius: 20px;
 }
 
 .overlay{
-    position: relative;
-    background: var(--linear-grad);
-    color: #ffffff;
-    left: -150%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     height: 100%;
-    width: 250%;
+    width: 100%;
+    color: #ffffff;
     transition: transform 0.6s ease-in-out;
 }
 
 .overlay-panel{
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    padding: 0 40px;
+    padding: 0 25px;
     text-align: center;
-    height: 100%;
-    width: 340px;
     transition: 0.6s ease-in-out;
-}
-
-.overlay-right{
-    right: 0;
-    transform: translateX(0%)
-}
-
-.overlay-right h1{
-    color: #fff;
 }
 
 p {
     font-size: 14px;
     font-weight: 300;
     line-height: 20px;
-    letter-spacing: 0.5px;
-    margin: 25px 0 35px;
+    letter-spacing: .5px;
+    margin-top: 15px;
 }
 
 
