--- a/login/style.css
+++ b/login/style.css
@@ -27,7 +27,7 @@ body {
     flex-direction: column-reverse;
     justify-content: start;
     width: 90%;
-    height: 70%;
+    height: 75%;
     background: #fff;
     border-radius: 13px;
     overflow: hidden;
@@ -56,6 +56,7 @@ span{
 }
 
 .infield{
+    position: relative;
     width: 90%;
     margin: 6px 0;
 }
@@ -69,6 +70,9 @@ input{
 }
 
 label{
+    position: absolute;
+    left: 50%;
+    top: 100%;
     transform: translate(-50%);
     width: 0;
     height: 2px;
@@ -102,6 +106,8 @@ button{
     font-size: 12px;
     font-weight: bold;
     padding: 12px 45px;
+    cursor: pointer;
+    margin: 10px 0;
 }
 
 .form-container button{
