--- a/login/style.css
+++ b/login/style.css
@@ -31,6 +31,7 @@ body {
     background: #fff;
     border-radius: 13px;
     overflow: hidden;
+    transition: 0.6s ease-in-out;
 }
 
 .form-container{
@@ -40,6 +41,7 @@ body {
     justify-content: center;
     align-items: center;
     transition: all 0.6s ease-in-out;
+    overflow: hidden;
 }
 
 form {
@@ -152,6 +154,69 @@ p {
     margin-top: 15px;
 }
 
+@media (max-height: 650px) {
+    .form-container {
+        height: 100%;
+    }
+
+    .overlay-container {
+        display: none;
+    }
+}
+
+/* Tablets (sm) */
+@media (min-width: 576px) {
+    .container {
+        width: 55%;
+        height: 75%;
+    }
+}
+
+/* Tablets (md) */
+@media (min-width: 768px) {
+    .container {
+        width: 45%;
+        height: 75%;
+    }
+}
+
+/* Desktops Pequenos */
+@media (min-width: 992px) {
+    .container {
+        width: 70%;
+        height: 60%;
+        flex-direction: row;
+    }
+
+    .form-container{
+        height: 100%;
+        width: 100%;
+    }
+
+    .overlay-container {
+        height: 100%;
+        width: 100%;
+    }
+}
+
+/* Desktops Largos */
+@media (min-width: 1200px) {
+    .container {
+        width: 50%;
+        height: 70%;
+        flex-direction: row;
+    }
+
+    .form-container{
+        height: 100%;
+        width: 100%;
+    }
+
+    .overlay-container {
+        height: 100%;
+        width: 100%;
+    }
+}
 
 
 
